# hw_stonefish_ros1

./: CMakeLists.txt  README.md
config/: T200-Performances.csv  T200-Performances.ods
include/stonefish_ros/: ROSInterface.h  ROSScenarioParser.h  ROSSimulationManager.h
launch/: python_simulator_launcher.launch  python_simulator_nogui_launcher.launch  simulator.launch
msg/: HydroDynamics.msg
scripts/: __init__.py  custom_env.py  gym_stonefish.py  gym_stonefish_nogui.py  train_auv.py
src/: ROSInterface.cpp  ROSScenarioParser.cpp  ROSSimulationManager.cpp  parsed_simulator.cpp  parsed_simulator_nogpu.cpp  pybind_parsed_simulator.cpp  pybind_parsed_simulator_nogpu.cpp
